--- a/package.json
+++ b/package.json
@@ -50,7 +50,14 @@
   "pre-commit": "lint:staged",
   "babel": {
     "plugins": [
-      "styled-components"
+      "styled-components",
+      [
+        "import",
+        {
+          "libraryName": "antd",
+          "style": true
+        }
+      ]
     ],
     "presets": [
       [
@@ -137,6 +144,9 @@
     "testRegex": "tests/.*\\.test\\.js$"
   },
   "dependencies": {
+    "antd": "^3.4.0",
+    "babel-plugin-dynamic-import-node": "1.0.2",
+    "babel-plugin-import": "^1.6.5",
     "babel-polyfill": "6.23.0",
     "chalk": "^1.1.3",
     "compression": "1.6.2",
@@ -144,7 +154,6 @@
     "eslint-config": "^0.3.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-jsx": "^5.0.0",
-    "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-standard": "^3.0.1",
     "express": "4.15.3",
     "fontfaceobserver": "2.0.9",
@@ -154,6 +163,8 @@
     "intl": "1.2.5",
     "invariant": "2.2.2",
     "ip": "1.1.5",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
     "lodash": "4.17.4",
     "minimist": "1.2.0",
     "prop-types": "15.5.10",
@@ -171,6 +182,7 @@
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
     "styled-components": "2.0.0",
+    "toastr": "^2.1.4",
     "warning": "3.0.0",
     "whatwg-fetch": "2.0.3"
   },
