--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "ip": "1.1.5",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
+    "less-vars-to-js": "^1.2.1",
     "lodash": "4.17.4",
     "minimist": "1.2.0",
     "prop-types": "15.5.10",
